cabal-version:   3.0
name:            hedgehog-stateful-demo
version:         0.1.0.0

-- synopsis:
-- description:
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          Nicolas Trangez
maintainer:      ikke@nicolast.be

-- copyright:
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Lib
  build-depends:
    , base               ^>=4.17.0.0
    , postgresql-simple  ^>=0.6.5
    , text               ^>=2.0.1
    , time               ^>=1.12.2

test-suite hedgehog-stateful-demo-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tutorial.hs
  build-depends:
    , base                    ^>=4.17.0.0
    , hedgehog                ^>=1.2
    , hedgehog-stateful-demo
    , lifted-base             ^>=0.2.3.12
    , monad-control           ^>=1.0.3.1
    , mtl                     ^>=2.2.2
    , postgresql-simple       ^>=0.6.5
    , resource-pool           ^>=0.2.3.2
    , text                    ^>=2.0.1
    , tmp-postgres            ^>=1.34.1.0
    , transformers            ^>=0.5.6.2
    , transformers-base       ^>=0.4.6
