cabal-version:   3.0
name:            hedgehog-stateful-demo
version:         0.1.0.0
synopsis:        A demonstration of stateful systems testing using Hedgehog
description:
  Based on
  <https://jacobstanley.io/how-to-use-hedgehog-to-test-a-real-world-large-scale-stateful-app/ a tutorial>
  by <https://jacobstanley.io Jacob Stanley> on using
  <https://hedgehog.qa/ Hedgehog> to test stateful code, this repository
  migrates Jacob's code to Hedgehog's built-in state-machine testing
  functionality.
  .
  See README.md for pointers at individual commits to follow the process.

homepage:        https://github.com/NicolasT/hedgehog-stateful-demo
bug-reports:     https://github.com/NicolasT/hedgehog-stateful-demo/issues
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          Nicolas Trangez
maintainer:      ikke@nicolast.be
copyright:       (c) 2020, Jacob Stanley. (c) 2023, Nicolas Trangez
category:        Testing
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

-- extra-source-files:

tested-with:     GHC ==9.4.4

source-repository head
  type:     git
  location: https://github.com/NicolasT/hedgehog-stateful-demo.git
  branch:   main

common warnings
  ghc-options: -Wall

library
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Lib
  build-depends:
    , base               ^>=4.17.0.0
    , postgresql-simple  ^>=0.6.5
    , text               ^>=2.0.1
    , time               ^>=1.12.2

test-suite hedgehog-stateful-demo-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tutorial.hs
  build-depends:
    , base                    ^>=4.17.0.0
    , hedgehog                ^>=1.2
    , hedgehog-stateful-demo
    , lifted-base             ^>=0.2.3.12
    , monad-control           ^>=1.0.3.1
    , postgresql-simple       ^>=0.6.5
    , resource-pool           ^>=0.2.3.2
    , text                    ^>=2.0.1
    , tmp-postgres            ^>=1.34.1.0
    , transformers-base       ^>=0.4.6
